# django-rag-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/config/: settings.py  urls.py
backend/rag/: agent.py  embeddings.py  models.py  retriever.py  serializers.py  tools.py  urls.py  views.py
backend/rag/migrations/: 0001_initial.py  0002_enable_pgvector.py
nginx/: default.conf
